<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- ── Items to Clear ───────────────────────────────────────────── -->
    <PreferenceCategory android:title="@string/setting_category_clear_items">

        <CheckBoxPreference
            android:icon="@drawable/icon_history_pref"
            android:defaultValue="false"
            android:key="sp_clear_history"
            android:title="@string/album_title_history" />

        <CheckBoxPreference
            android:icon="@drawable/icon_refresh_pref"
            android:defaultValue="true"
            android:key="sp_clear_cache"
            android:title="@string/clear_title_cache" />

        <CheckBoxPreference
            android:icon="@drawable/icon_dom_pref"
            android:defaultValue="true"
            android:key="sp_clearIndexedDB"
            android:title="@string/setting_title_dom" />

        <CheckBoxPreference
            android:icon="@drawable/icon_cookie_pref"
            android:defaultValue="false"
            android:key="sp_clear_cookie"
            android:summary="@string/setting_summary_cookie_delete"
            android:title="@string/setting_title_cookie" />

        <CheckBoxPreference
            android:icon="@drawable/icon_database_pref"
            android:defaultValue="false"
            android:key="sp_deleteDatabase"
            android:summary="@string/setting_backup_sumDatabase"
            android:title="@string/title_appDatabase" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="sp_clear_settings"
            android:title="@string/setting_label"
            android:summary="@string/setting_backup_sumSettings"
            android:icon="@drawable/icon_settings_pref" />

        <CheckBoxPreference
            android:icon="@drawable/icon_alert_pref"
            android:defaultValue="true"
            android:key="sp_clear_quit"
            android:title="@string/clear_title_quit" />

    </PreferenceCategory>

</PreferenceScreen>
