<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="ContentDescription"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:layout_marginBottom="20dp"
            android:text="@string/app_intro_b"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:layout_marginBottom="20dp"
            android:text="@string/app_intro_c"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startBrowsing"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            app:icon="@drawable/icon_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/main_omnibox_input_hint"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:layout_marginBottom="20dp"
            android:text="@string/app_intro_d"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/openSettings"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            app:icon="@drawable/icon_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/setting_label"
            android:textAllCaps="true" />

    </LinearLayout>

</ScrollView>